src/styles.css
/* ... */
@media only screen and (max-width: 810px) {
  .contactUs {
    /* width:15vw; */
    padding-left: 0;
    padding-right: 0;
  }
  .followUsHeader {
    text-align: center;
    float: center;
    padding-right: 0;
    padding-bottom: 1vw;
    /* justify-content: center;
        padding-right:0px;*/
  }
  .contactButtons {
    align-content: center;
    justify-content: center;
    /* max-width:15vw; */
    /* padding-left:10px; */
  }
  .contactImg {
    padding-bottom: 3px;
    padding-top: 3px;
  }
}

@media only screen and (max-width: 950px) {
  .contactUs {
    /* width:25vw; */
    /* padding-left:10vw; */
    /* padding-right:10vw; */
  }
  .followUsHeader {
    width: 100px;
    text-align: center;
    float: center;
    /* padding-right:3vw; */
    padding-bottom: 3vw;
    /* justify-content: center;
        padding-right:0px;*/
  }
  .contactButtons {
    align-content: center;
    justify-content: center;
    /* width:20vw; */
    padding-left: 0;
  }
  .contactImg {
    padding-bottom: 3px;
    padding-top: 3px;
  }
}

@media (min-height: 600px) {
  .footer {
    font-size: 18px !important;
  }
}

/*scroll button css*/

@import url(https://fonts.googleapis.com/css?family=Josefin+Sans:300,400);

.previewTitle {
  z-index: 2;
  color: black;
  font: normal 300 32px/1 'Josefin Sans', sans-serif;
  text-align: center;
  white-space: nowrap;
}

.downArrow {
  height: 75px;
  width: 75px;
  padding-bottom: 10px;
}
.demo a {
  z-index: 2;
  display: inline-block;
  color: black;
  font : normal 400 20px/1 'Josefin Sans', sans-serif;
  letter-spacing: .1em;
  text-decoration: none;
  transition: opacity .3s;
}
.demo a:hover {
  opacity: .5;
}

.demo {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}
.infoContainer {
  padding-left: 10px;
  padding-right: 10px;
  text-align: justify;
  display: flex;
  flex-direction: column;
  font : normal 400 18px/1 'Josefin Sans', sans-serif;
}
.infoSpan {
  margin-top: 20px;
}

.shareIcon {
  height: 20px;
  width: 20px;
  margin-left: 10px;
}
.exampleContainer {
  display: flex;
  flex-direction: column;
}
.scrollBtnContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  text-align: center;
}

#section03 a {
}

#section03 a span::after {
  border-left: 1px solid #fff;
  border-bottom: 1px solid #fff;
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
  box-sizing: border-box;
}
#section03 a span::before {
  box-shadow: 0 0 0 0 rgba(255,255,255,.1);
  border-radius: 100%;
  opacity: 0;
  -webkit-animation: sdb03 3s infinite;
  animation: sdb03 3s infinite;
  box-sizing: border-box;
}
@-webkit-keyframes sdb03 {
  0% {
    opacity: 0;
  }
  30% {
    opacity: 1;
  }
  60% {
    box-shadow: 0 0 0 60px rgba(255,255,255,.1);
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}
@keyframes sdb03 {
  0% {
    opacity: 0;
  }
  30% {
    opacity: 1;
  }
  60% {
    box-shadow: 0 0 0 60px rgba(255,255,255,.1);
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

